Add stubbed-out main navigation.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 	<link rel="stylesheet" href="style.css">
 	<title>Mosaic Nav</title>
 </head>
-<body>    
+<body>
+	<nav class="main-nav">
+		<ul class="main-nav__menu">
+			<li class="main-nav__menu-item">
+				<a class="main-nav__menu-item-link" href="/">Home</a>
+			</li>
+			<li class="main-nav__menu-item">
+				<a class="main-nav__menu-item-link" href="/maps">Maps</a>
+			</li>
+			<li class="main-nav__menu-item">
+				<a class="main-nav__menu-item-link" href="/info-graphics">Info Graphics</a>
+			</li>
+			<li class="main-nav__menu-item">
+				<a class="main-nav__menu-item-link" href="/animations">Animations</a>
+			</li>
+			<li class="main-nav__menu-item">
+				<a class="main-nav__menu-item-link" href="/other">Other</a>
+			</li>
+			<li class="main-nav__menu-item">
+				<a class="main-nav__menu-item-link" href="/about">About</a>
+			</li>
+			<li class="main-nav__menu-item">
+				<a class="main-nav__menu-item-link" href="/contact">Contact</a>
+			</li>
+		</ul>
+	</nav>
 </body>
 </html>
