Add classes and styles for initial grid layout.

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 <body>
 	<nav class="main-nav">
 		<ul class="main-nav__menu">
-			<li class="main-nav__menu-item">
-				<a class="main-nav__menu-item-link" href="/">Home</a>
+			<li class="main-nav__menu-item main-nav__menu-item__home">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__home" href="/">Home</a>
 			</li>
-			<li class="main-nav__menu-item">
-				<a class="main-nav__menu-item-link" href="/maps">Maps</a>
+			<li class="main-nav__menu-item main-nav__menu-item__maps">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__maps" href="/maps">Maps</a>
 			</li>
-			<li class="main-nav__menu-item">
-				<a class="main-nav__menu-item-link" href="/info-graphics">Info Graphics</a>
+			<li class="main-nav__menu-item main-nav__menu-item__info-graphics">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__info-graphics" href="/info-graphics">Info Graphics</a>
 			</li>
-			<li class="main-nav__menu-item">
-				<a class="main-nav__menu-item-link" href="/animations">Animations</a>
+			<li class="main-nav__menu-item main-nav__menu-item__animations">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__animations" href="/animations">Animations</a>
 			</li>
-			<li class="main-nav__menu-item">
-				<a class="main-nav__menu-item-link" href="/other">Other</a>
+			<li class="main-nav__menu-item main-nav__menu-item__other">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__other" href="/other">Other</a>
 			</li>
-			<li class="main-nav__menu-item">
-				<a class="main-nav__menu-item-link" href="/about">About</a>
+			<li class="main-nav__menu-item main-nav__menu-item__about">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__about" href="/about">About</a>
 			</li>
-			<li class="main-nav__menu-item">
-				<a class="main-nav__menu-item-link" href="/contact">Contact</a>
+			<li class="main-nav__menu-item main-nav__menu-item__contact">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__contact" href="/contact">Contact</a>
 			</li>
 		</ul>
 	</nav>
