Add initial mosaic-style via grid-areas layout

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 			<li class="main-nav__menu-item main-nav__menu-item__home">
 				<a class="main-nav__menu-item-link main-nav__menu-item-link__home" href="/">Home</a>
 			</li>
+			<li class="main-nav__menu-item main-nav__menu-item__about">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__about" href="/about">About</a>
+			</li>
+			<li class="main-nav__menu-item main-nav__menu-item__contact">
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__contact" href="/contact">Contact</a>
+			</li>
 			<li class="main-nav__menu-item main-nav__menu-item__maps">
 				<a class="main-nav__menu-item-link main-nav__menu-item-link__maps" href="/maps">Maps</a>
 			</li>
@@ -23,13 +29,7 @@
 				<a class="main-nav__menu-item-link main-nav__menu-item-link__animations" href="/animations">Animations</a>
 			</li>
 			<li class="main-nav__menu-item main-nav__menu-item__other">
-				<a class="main-nav__menu-item-link main-nav__menu-item-link__other" href="/other">Other</a>
-			</li>
-			<li class="main-nav__menu-item main-nav__menu-item__about">
-				<a class="main-nav__menu-item-link main-nav__menu-item-link__about" href="/about">About</a>
-			</li>
-			<li class="main-nav__menu-item main-nav__menu-item__contact">
-				<a class="main-nav__menu-item-link main-nav__menu-item-link__contact" href="/contact">Contact</a>
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__other" href="/other">Door Number Two</a>
 			</li>
 		</ul>
 	</nav>
