--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<a class="main-nav__menu-item-link main-nav__menu-item-link__animations" href="/animations">Animations</a>
 			</li>
 			<li class="main-nav__menu-item main-nav__menu-item__other">
-				<a class="main-nav__menu-item-link main-nav__menu-item-link__other" href="/other">Door Number Two</a>
+				<a class="main-nav__menu-item-link main-nav__menu-item-link__other" href="/other">Door Number 2</a>
 			</li>
 		</ul>
 	</nav>
